Fixing sonar-findings